force-app/main/default/objects/AtRiskStatusList__c/AtRiskStatusList__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>At Risk Status choices for flow</description>
    <label>AtRiskStatusList</label>
</CustomObject>