force-app/main/default/objects/AtRiskStatusList__c/fields/Boolean_Value__c.field-meta.xml
<CustomField>
    <fullName>Boolean_Value__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Boolean Value</label>
    <type>Checkbox</type>
</CustomField>