force-app/main/default/objects/AtRiskStatusList__c/fields/Manual_Flag__c.field-meta.xml
<CustomField>
    <fullName>Manual_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flow: Manual Risk Flag
Screen Name: You manually flagged account
Field Name: fldAtRiskStatus
Choice: dynAtRiskStatus</description>
    <inlineHelpText>Flow: Manual Risk Flag
Screen Name: You manually flagged account
Field Name: fldAtRiskStatus
Choice: dynAtRiskStatus</inlineHelpText>
    <label>Manual Flag</label>
    <type>Checkbox</type>
</CustomField>