force-app/main/default/objects/AtRiskStatusList__c/fields/ValidateFlowState__c.field-meta.xml
<CustomField>
    <fullName>ValidateFlowState__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked this choice will appear for:

Flows: Validate Flow State &amp; Business Function and Trigger Form
Screen: Acceptance &amp; Category Not Found
Field: fldAtRiskStatus
Choice: dynRiskStatus</description>
    <inlineHelpText>If checked this choice will appear for:

Flows: Validate Flow State &amp; Business Function and Trigger Form
Screen: Acceptance &amp; Category Not Found
Field: fldAtRiskStatus
Choice: dynRiskStatus</inlineHelpText>
    <label>Validate Flow State</label>
    <type>Checkbox</type>
</CustomField>