force-app/main/default/objects/AtRiskStatusList__c/fields/Value__c.field-meta.xml
<CustomField>
    <fullName>Value__c</fullName>
    <inlineHelpText>Choice Value (Number)</inlineHelpText>
    <label>Value</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>