force-app/main/default/objects/AtRiskStatusList__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Label__c</columns>
    <columns>Value__c</columns>
    <columns>Order__c</columns>
    <columns>Boolean_Value__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>